# codec

./: README.md  block.py  blockchain.py  message.py  pyproject.toml  structs.py  usage_example.py  wallet.py
src/codec/: cipher.py  errors.py  keys.py  message.py  messenger.py  session.py  signer.py
src/codec/transport/: __init__.py  base.py  http.py  websocket.py
tests/: test_cipher.py  test_http_transport.py  test_keys.py  test_messenger.py  test_session.py  test_signer.py  test_websocket_transport.py
